# GandB

./: CMakeLists.txt  package.xml  readme.md
include/: display.h
include/grad_spline/: a_star.h  data_type.h  grad_band_optimizer.h  hybrid_astar.h  sdf_map.h  uniform_bspline.h
launch/: random.launch  random1.launch  random2.launch
rviz/: traj.rviz  traj_rviz.launch
script/: bspline.py  bspline_basic.py  bspline_draw_basic.py  bspline_draw_curve.py  coefficent.py  drag.py  draw.py  least_square.py  min_principle.py  plot.py  test.py  uniform_bspline.py
src/: a_star.cpp  bspline.cpp  example_random.cpp  grad_band_optimizer.cpp  hybrid_astar.cpp  state_transition.cpp  test_astar.cpp
test/: least_square.cpp  sdf.cpp  solve_equation.cpp  state_transition.cpp
text/: coe.txt  s.md  sum_of_video.md
